--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/css/stylesheet.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/stylesheet.css" | prepend: site.url }}">
     <!-- <link rel="stylesheet" href="/css/stylesheet.css" > -->
 
     <!-- Google fonts -->
