--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
     <!-- Custom CSS -->
     <!-- <link rel="stylesheet" href="{{ "/css/stylesheet.css" | prepend: site.url }}"> -->
-    <link rel="stylesheet" href="ai/css/stylesheet.css" >
+    <link rel="stylesheet" href="css/stylesheet.css" >
 
     <!-- Google fonts -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
