--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <body>
 
     <div class="page-content">
-      <div class="wrap">
+      <div class="wrap", class="inner">
       {{ content }}
       </div>
     </div>
