--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -50,9 +50,9 @@ Theme Styles
 
 body {
   box-sizing: border-box;
-  color:#373737;
+  color:#FFFCF1;
   background: #212121;
-  font-size: 16px;
+  font-size: 1.1em;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
