--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+---
+<div class="post">
 
-     {% include head.html %}
-     
-    <body>
+  <header class="post-header">
+    <h1>{{ page.title }}</h1>
+  </header>
 
-    <div class="page-content">
-      <div class="wrap inner">
-      {{ content }}
-      </div>
-    </div>
-    
+  <article class="post-content">
+  {{ content }}
+  </article>
 
-    <!-- mathjax -->
-    <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    </body>
-</html>
+</div>
