--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
      
     <body>
 
-    <div class="page-content">
-      <div class="wrap">
+    <div class="home page-content">
+      <div class="materials-wrap wrap">
       {{ content }}
       </div>
     </div>
