--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,12 @@
 <html>
 
      {% include head.html %}
+
+
      
     <body>
-
+    {% include header.html %}
+    
     <div class="home page-content">
       <div class="materials-wrap wrap">
       {{ content }}
