--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,4 +11,7 @@ layout: default
   {{ content }}
   </article>
 
+  <!-- mathjax -->
+    <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
 </div>
